--- a/overlay/src/index.css
+++ b/overlay/src/index.css
@@ -5,7 +5,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+}
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
 }
