css and timeout on received websocket messages

--- a/overlay/src/index.css
+++ b/overlay/src/index.css
@@ -11,3 +11,9 @@ html, body, #root {
   height: 100%;
   width: 100%;
 }
+
+@layer utilities {
+  .text-stroke {
+      -webkit-text-stroke: 1px black;
+  }
+}
